--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: #C1BCCC;
+}
+
 body::before {
     content: '';
     width: 100%;
@@ -8,6 +18,10 @@ body::before {
     left: 0;
     z-index: -1;
     background-color: #121214;
+}
+
+body, input, button, select, p, label {
+    font-family: "Poppins", sans-serif;
 }
 
 .pagina {
@@ -29,10 +43,10 @@ h1 {
 
     width: 320px;
     height: 85px;
+    margin-bottom: 24px;
 }
 
 header p {
-    font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
@@ -40,4 +54,63 @@ header p {
 
     width: 285px;
     height: 50px;
+}
+
+form {
+    background: #FAFAFC;
+    border-radius: 8px;
+    height: 1565px;
+    margin-bottom: 90px;
+
+    padding: 64px;
+}
+
+fieldset {
+    border: none;
+}
+
+fieldset legend {
+    font-family: "Archivo", sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 34px;
+
+    padding-bottom: 16px;
+    border-bottom: 1px solid #E6E6F0;
+    width: 100%;
+}
+
+.input-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-wrapper label {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #4E4958;
+    margin-bottom: 8px;
+}
+
+.input-wrapper label span {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #C1BCCC;
+    margin-left: 12px;
+}
+
+.input-wrapper input {
+    background: #FAFAFC;
+    border: 1px solid #E6E6F0;
+    border-radius: 8px;
+    height: 55px;
+    padding: 0 24px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #C1BCCC;
 }
