--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body::before {
     background-color: #121214;
 }
 
-body, input, button, select, p, label {
+body, input, button, select, p, label, textarea {
     font-family: "Poppins", sans-serif;
 }
 
@@ -69,6 +69,12 @@ fieldset {
     border: none;
 }
 
+.fieldset-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
 fieldset legend {
     font-family: "Archivo", sans-serif;
     font-weight: 600;
@@ -98,11 +104,13 @@ fieldset legend {
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    color: #C1BCCC;
+    color: #6c6a71;
     margin-left: 12px;
 }
 
-.input-wrapper input {
+.input-wrapper input,
+.input-wrapper textarea,
+.input-wrapper select {
     background: #FAFAFC;
     border: 1px solid #E6E6F0;
     border-radius: 8px;
@@ -112,5 +120,19 @@ fieldset legend {
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
-    color: #C1BCCC;
+    color: #6c6a71;
+}
+
+.input-wrapper textarea {
+    padding: 0;
+    height: 170px;
+}
+
+.input-wrapper select {
+    appearance: none;
+
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_54)'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_54'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+
+    background-repeat: no-repeat;
+    background-position: right 24px top 50%;
 }
