--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ form {
     margin-bottom: 90px;
 
     padding: 64px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
 }
 
 fieldset {
@@ -91,7 +95,8 @@ fieldset legend {
     flex-direction: column;
 }
 
-.input-wrapper label {
+.input-wrapper label,
+.checkbox-wrapper label {
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
@@ -135,4 +140,51 @@ fieldset legend {
 
     background-repeat: no-repeat;
     background-position: right 24px top 50%;
+}
+
+.horizontal {
+    display: flex;
+    gap: 24px;
+    margin-top: 24px;
+}
+
+.horizontal > div:nth-child(1) {
+    width: 100%;
+}
+
+.checkbox-wrapper {
+    position: relative;
+}
+
+.checkbox-wrapper label{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    margin: 0;
+}
+
+.checkbox-wrapper input {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    opacity: 0;
+}
+
+.checkbox-wrapper label::before {
+    content: '';
+    width: 24px;
+    height: 24px;
+    border: 1px solid #E6E6F0;
+    border-radius: 8px;
+    display: block;
+}
+
+.checkbox-wrapper input:checked + label::before {
+    background-image: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 11.17L1.83 7L0.410004 8.41L6 14L18 2L16.59 0.589996L6 11.17Z' fill='%2342D3FF'/%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat;
+    background-position: 50%;
+}
+
+.checkbox-wrapper input:focus + label::before{
+    outline: 2px solid black;
 }
