--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,9 @@ header p {
 
 form {
     background: #FAFAFC;
-    border-radius: 8px;
+    border-radius: 8px 8px 0 0;
     height: 1565px;
-    margin-bottom: 90px;
+    /*margin-bottom: 90px;*/
 
     padding: 64px;
 
@@ -187,4 +187,38 @@ fieldset legend {
 
 .checkbox-wrapper input:focus + label::before{
     outline: 2px solid black;
+}
+
+footer {
+    background: #F0F0F4;
+
+    height: 135px;
+
+    display: flex;
+    flex-direction: column;
+
+    padding: 40px 64px;
+
+    margin-bottom: 90px;
+
+    border-top: 1px solid #D6D6D6;
+    border-radius: 0px 0px 8px 8px;
+}
+
+.button {
+    height: 55px;
+    background-color: #04d361;
+    color: white;
+
+    font-family: "Archivo", sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    font-weight: 26px;
+    
+    border-radius: 8px;
+    border: 0px;
+}
+
+.button:hover {
+    background: #03ad50;
 }
